Bug 1413288: The owner of a bullet frame is the first continuation of the parent. r=xidorn

MozReview-Commit-ID: FUsdsETkV2Q